# DESimpy

./: .pdm-python  404.html  README.md  _typos.toml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: generate-documentation.yml
docs/: _quarto.yml  examples.md  explanation.md  index.md  index.qmd  reference.md  tutorial.md
docs/source/: conf.py  index.rst  installation.rst
examples/: README.md  elevator.py  example_0.py  ggc.py  ggc_network.py  index.html  interrupt.py  mmc.py  mmc_2.py  mminfinity.py  simpy_bank_renege.py  simpy_car.py  simpy_car_class.py  simpy_car_driver.py  simpy_car_request_charging_station.py  simpy_carwash.py  simpy_clock.py  simpy_how_example.py  simpy_iterative_run.py  simpy_machine_shop.py  simpy_monty_python_flying_circus.py  simpy_movie_renege.py  simpy_school_bell.py  test_example_0.py
examples/queueing_systems/: README.md  ggc.py  ggc_network.py  mmc.py
examples/simpy/: README.md  bank_renege.py  car.py  car_class.py  car_driver.py  car_request_charging_station.py  carwash.py  clock.py  how.py  iterative_run.py  machine_shop.py  monty_python_flying_circus.py  movie_renege.py
examples/validation/: validate_car_driver.py  validate_simpy_car.py  validate_simpy_car_class.py  validate_simpy_car_request_charging_station.py  validate_simpy_clock.py  validate_simpy_how_example.py
methodology/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/explanation/: index.html
src/desimpy/: des.py  (+9 more)
tests/: test_event_class.py
(+83 files in other folders)
