[project]
name = "DESimpy"
version = "0.48.0"
description = "Discrete event simulation in using synchronous Python."
authors = [
    { name = "galenseilis", email = "galen.seilis@seilis.ca" },
]
dependencies = [
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache 2.0"}

[project.optional-dependencies]
dev = [
    "simdist>=0.1.1",
    "simpy>=4.1.1",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-material>=0.0.36",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/desimpy"]

[tool.pdm]
distribution = true


[dependency-groups]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "simpy>=4.1.1",
]
