[project]
name = "DESimpy"
version = "0.48.0"
description = "Discrete event simulation in using synchronous Python."
authors = [
    { name = "galenseilis", email = "galen.seilis@seilis.ca" },
]
dependencies = [
    "myst-parser>=4.0.0"
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache 2.0"}

[project.optional-dependencies]
dev = [
    "simdist>=0.1.1",
    "simpy>=4.1.1",
    "ruff>=0.8.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/desimpy"]

